--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body bgcolor="pink">
-    <u><h3>LIST OF Branches</h3></u>
+<body>
+    <u>LISTS</u>
     <ul>
         <li><a href="cs.html">CSE</a></li>
         <li>ECE</li>
         <li>CE</li>
-    </ul>    
+    </ul>
 </body>
 </html>
