--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body bgcolor="yellow">
     <u>LISTS</u>
     <ul>
         <li><a href="cs.html">CSE</a></li>
         <li>ECE</li>
         <li>CE</li>
     </ul>
+    <b>HII...</b>
 </body>
 </html>
