--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body bgcolor="purple">
+<body bgcolor="violet">
     <u>LISTS</u>
     <ul>
         <li><a href="cs.html">CSE</a></li>
